[Fix] CTA Divider - disable text selection && CTA w/ FAQs - fix padding and float on smaller devices && Form - optimize field width for mobile

--- a/_assets/sass/_parts-sections/cta_with_faqs.sass
+++ b/_assets/sass/_parts-sections/cta_with_faqs.sass
@@ -3,6 +3,8 @@
 	border-top: 2px solid $divider
 	box-sizing: border-box
 	+clearfix
+	+max(870, height)
+		padding: 100px 0 120px
 	+max(920)
 		padding: 100px 0 120px
 	+max(520)
@@ -65,6 +67,10 @@
 		float: left
 		width: perc(580, 1150)
 		max-width: none
+		+max(920)
+			float: none
+			width: 100%
+			max-width: 580px
 
 	.faqs_small
 		margin-top: 60px
