--- a/_assets/sass/_parts-sections/form.boxed.sass
+++ b/_assets/sass/_parts-sections/form.boxed.sass
@@ -14,9 +14,9 @@
 		max-width: 580px
 		+center(32px)
 	+max(520)
-		padding: 30px 30px
+		padding: 30px
 	+max(420)
-		padding: 25px 25px
+		padding: 25px
 
 	&-step
 		position: relative
@@ -124,13 +124,8 @@
 	&-fieldset
 		+fieldset($style:new, $inputHeight:60px, $textareaHeight:116px, $bgColor:white, $borderColor:$grey-mid-light, $fontSize:15.1px, $margin:3.6%, $widthRules:true, $renderAll:false, $renderLabel:true, $renderInput:true, $renderSelect:true, $renderTextarea:true, $renderRadio:true, $alignRadioLabels:true)
 
-		&.half
-			+max(520)
-				float: none
-				width: 100%
-				margin-right: 0
-			&.first 
-				margin-right: perc(17, 500)
+		+max(520)
+			width: 100% !important
 
 	
 
